# office-amherst

./: .coverage  .gitignore  .python-version  README.md  exceptions.py  main.py  note.txt  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements.txt  setup.cfg
account/: check_invoice_paid.py  check_invoice_paid.spec
asset_nums/: asset.py  asset_example.xls  asset_example_output.xlsx  assets.py
assets/: assets.py  assets_in.xls  assets_in.xlsx  battery_test.py  entities.py  fw_updater.py  main.py  manager.py  prices.xlsx  product.py
cmc/: auto_cmc.py  cmc_entities.py  cmc_funcs.py  commence.py  dummy.py
entities/: cmc.py  const.py  order.py
excel/: excel.py
fixtures/: asset_example.xls  asset_example_out.xlsx
generated_docs/: hire_inv_output.docx
in_out/: cmc_dde.py  cmc_direct.py  commence.py  cursor.py  dde.py  email_funcs.py  excel.py  file_management.py  makie.py  pandas_stuff.py
input_files/: hire_inv.dbf  prices.xlsx
invoice/: inv_2.py  inv_poc.py  invoice_dde.py  invoice_from_tmplt.py  products.py  products_hire.py
managers/: assess.py  asset_manager.py  assets.py  cmc_manager.py  commence.py  doc_templater.py  entities.py  invoice.py  invoice_manager.py  invoice_number.py  tran_manager.py  transact.py
src/: __init__.py  main.py
tests/: asset_tests.py  conftest.py  main.py  shipment_test.py  test_accounts.py  test_assets.py  test_cmc.py  test_config.py  test_dde.py  test_despatch.py  test_io.py  test_main.py  test_merger.py  test_order.py  test_transactions.py
tmplt/: entities.py  hire_inv_tmplt.docx  hire_sheet_tmplt.docx  invoice_tmplt_amherst.doc  prices.xlsx  (+3 more)
(+136 files in other folders)
